--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /sparkleshare-linux-0.8.3.tar.gz
 /sparkleshare-linux-0.8.4.tar.gz
 /sparkleshare-linux-0.9.0.tar.gz
+/sparkleshare-linux-0.9.1.tar.gz
